--- a/eventRegistry/content/hackrp.html
+++ b/eventRegistry/content/hackrp.html
@@ -9,7 +9,9 @@
     </div>
 
     <script>
-        // console.log(__data);
+        setTimeout(function(){
+            console.log(__data);
+        }, 500)
     </script>
 
 <!--== END PAGE ==-->
