--- a/eventRegistry/content/hackfn.html
+++ b/eventRegistry/content/hackfn.html
@@ -5,7 +5,7 @@
     <!-- Global CSS and Security are always applied -->
 
     <div class="container">
-        <h1>HACK RP</h1>
+        <h1>HACK FN</h1>
 
         <!-- * The following REGISTER button should always be present * -->
         <button class="button solid" id="reg">REGISTER</button>
