--- a/eventRegistry/content/nerdwd.html
+++ b/eventRegistry/content/nerdwd.html
@@ -1,3 +1,5 @@
+<!-- ====  Nerd Words  ==== -->
+
 <!--== HTML Page Content ==-->
     <!-- Templates contain just the <body> of the page -->
     <!-- The associated images and CSS will be in the eventResources folder -->
@@ -5,7 +7,7 @@
     <!-- Global CSS and Security are always applied -->
 
     <div class="container">
-        <h1>HACK RP</h1>
+        <h1>NERD WORDS</h1>
 
         <!-- * The following REGISTER button should always be present * -->
         <button class="button solid" id="reg">REGISTER</button>
