--- a/cdn/index.html
+++ b/cdn/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>xtacy CDN</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- <link rel="stylesheet" href="https://xtacy.org/static/css/Global.css"> -->
     <script>(()=>{window.localStorage.setItem('snooping around?','bWF5YmUgeW91IGNhbiBkZXZlbG9wIGZvciB1cyEgc2F5IGhpIHRvIHpydGh4bkBnbWFpbC5jb20=')})()</script>
 </head>
 <body>
@@ -37,6 +38,8 @@
                 <p id="contact">
                     You can either <a href="http://xtacy.org"><b class="bold">go home</b></a> 
                     or <a href="mailto:hello@xtacy.org"><b class="bold">talk to us</b></a>
+                    <br><br><br>
+                    <a href="/login"><b>Login</b></a>
                 </p>
                 <p class="dev">Developed with 💛 by NAMAK</p>
             </div>
