--- a/cdn/cdn.html
+++ b/cdn/cdn.html
@@ -6,9 +6,9 @@
     <title>CDN Admin Panel</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" media="screen" href="http://xtacy.org:3000/static/css/Global.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="http://xtacy.org:3000/static/css/Header.css">
-    <link rel="stylesheet" type="text/css" media="screen" href="http://xtacy.org:3000/static/css/Footer.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="https://xtacy.org/static/css/Global.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="https://xtacy.org/static/css/Header.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="https://xtacy.org/static/css/Footer.css">
 </head>
 <body>
 
