--- a/cdn/login.html
+++ b/cdn/login.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>CDN Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="http://xtacy.org:3000/static/css/Global.css">
+    <link rel="stylesheet" type="text/css" media="screen" href="https://xtacy.org/static/css/Global.css">
     <script>(()=>{window.localStorage.setItem('snooping around?','bWF5YmUgeW91IGNhbiBkZXZlbG9wIGZvciB1cyEgc2F5IGhpIHRvIHpydGh4bkBnbWFpbC5jb20=')})()</script>
 </head>
 <body>
