--- a/cdn/login.html
+++ b/cdn/login.html
@@ -23,7 +23,7 @@
     
         <section class="login">
             <form action="/login" method="POST">
-                <input class="textbox" type="text" name="password" placeholder="Password">
+                <input class="textbox" type="password" name="password" placeholder="Password">
                 <button class="button solid">LOGIN</button>
             </form>
         </section>      
