Add events some event image files are ugly and will be changed

--- a/eventRegistry/content/nerdwd.html
+++ b/eventRegistry/content/nerdwd.html
@@ -1,16 +1,29 @@
-<!-- ====  Nerd Words  ==== -->
+<!-- ====  Hackathon (Real)  ==== -->
 
-<!--== HTML Page Content ==-->
-    <!-- Templates contain just the <body> of the page -->
-    <!-- The associated images and CSS will be in the eventResources folder -->
-    <!-- Any JS you want to add to a specific page must be in static -->
+<!--== HTML Promo Content ==-->
+    <!-- Templates contain just the <article> of the page -->
+    <!-- NO ACTION ELEMENTS LIKE LINKS OR BUTTONS -->
+
     <!-- Global CSS and Security are always applied -->
 
-    <div class="container">
-        <h1>NERD WORDS</h1>
+    <p class="justify">
+        Mauris tincidunt mauris quis leo consectetur egestas. Nam quis nibh in mauris tristique pretium. 
+        Sed at cursus diam, sit amet maximus orci. Etiam at diam at leo finibus tincidunt. Nunc mollis 
+        tincidunt lectus. Maecenas placerat purus dapibus mauris rutrum, quis commodo erat porta. 
+        Aliquam erat volutpat. Ut finibus erat eget dapibus ultricies. Ut sit amet justo in leo viverra gravida. 
+        Etiam a dictum justo. Aliquam eu efficitur tellus. Curabitur facilisis purus non velit tincidunt semper. 
+        Sed interdum vehicula urna. Morbi suscipit accumsan finibus. Sed sed est et dui bibendum consectetur in vel purus. 
+        Quisque dignissim nisl lacus, ut convallis est luctus nec.
+    </p>
 
-        <!-- * The following REGISTER button should always be present * -->
-        <button class="button solid" id="reg">REGISTER</button>
-    </div>
-
+    <p class="justify">
+        Mauris tincidunt mauris quis leo consectetur egestas. Nam quis nibh in mauris tristique pretium. 
+        Sed at cursus diam, sit amet maximus orci. Etiam at diam at leo finibus tincidunt. Nunc mollis 
+        tincidunt lectus. Maecenas placerat purus dapibus mauris rutrum, quis commodo erat porta. 
+        Aliquam erat volutpat. Ut finibus erat eget dapibus ultricies. Ut sit amet justo in leo viverra gravida. 
+        Etiam a dictum justo. Aliquam eu efficitur tellus. Curabitur facilisis purus non velit tincidunt semper. 
+        Sed interdum vehicula urna. Morbi suscipit accumsan finibus. Sed sed est et dui bibendum consectetur in vel purus. 
+        Quisque dignissim nisl lacus, ut convallis est luctus nec.
+    </p>
+    
 <!--== END PAGE ==-->
