cwrite, fortnt, gdance

--- a/eventRegistry/promos/gdance.html
+++ b/eventRegistry/promos/gdance.html
@@ -1,3 +1,34 @@
 <p class="justify">
+    To dance is to be out of yourself. Larger, more beautiful, more powerful. This is power, it is glory on earth and it is yours for the taking.<br>
+    <br>
+Prepare your dance team to groove as Xtacy’19, the annual techno-cultural fest of JMI, is here with The Group Dance Competition- Nritya. <br>
+<br>
+Come join us to be a part of this electrifying event and get swooped with the art of the soul in motion. Be a participant and expect a challenge or be the audience and enjoy the experience. We promise unlimited entertainment either way.
+<br><br>
+Rules-<br>
+1.The maximum time limit is 10 mins.<br>
+2.Maximum 12 participants at a time on stage.<br>
+3.No mic will be provide for self promotion(past winning).<br>
+<br>
+Venue: M.A. Ansari Auditorium, Gate No. 13, Jamia Millia Islamia<br>
+<br>
+Date: 31 March, 2019<br>
+<br>
+Time: 2:00 PM onwards<br>
+<br>
+Cash Prize: <br>
+1st prize: Rs 10,000<br>
+2nd prize: Rs 5000<br>
+<br>
+Registration Fee: Rs. 750 per team <br>
+<br>
+Paytm Number:<br>
+Asjad(8860217242)<br>
+<br>
+Registration link:<br>
+https://goo.gl/forms/IuGrwiPiag346STZ2  <br>
 
-</p>
+For further details contact:<br>
+Asjad: 8860217242<br>
+Shadma: 9205805445<br>
+Ashab: 8687080338<br>
