--- a/eventRegistry/content/ctflag.html
+++ b/eventRegistry/content/ctflag.html
@@ -2,7 +2,23 @@
 <div class="container center">
     <img src="/static/img/events/poster/ctflag.webp"   class="poster">
     <p class="justify">
-
+"Even google can't find me, but do you want to give it a try?"<br>
+<br>
+To all those who watch the hackers type away gibberish in movies and think "Hey I can do that too",<br>
+To all the hackers and security enthusiasts out there, <br>
+<br>
+Xtacy the annual fest of Faculty of Engineering and Technology Jamia Millia Islamia, brings to you the exact opportunity to show off your hacking skills in this Capture The Flag event!<br>
+Think you have what it takes, come and bring your hack buddies and participate to be introduced to the world of cryption, ciphers and so much more.<br>
+<br>
+Venue: FTK, Jamia Millia Islamia<br>
+Date: 30th March, 2019<br>
+Time:  1PM<br>
+Rules: A maximum of 3 members per team and one laptop per team. <br>
+Prize :- ?5000 + goodies<br>
+<br>
+For more info contact -<br>
+Salman (9650791665)<br>
+Alisamar(9971521167)<br>
     </p>
 </div>
 <button class="button solid" id="reg">REGISTER</button>
