--- a/eventRegistry/content/fsshow.html
+++ b/eventRegistry/content/fsshow.html
@@ -2,7 +2,44 @@
 <div class="container center">
     <img src="/static/img/events/poster/fsshow.webp"  class="poster">
     <p class="justify">
+        "Life’s too short to wear boring clothes.”<br>
+Cushnie Et Ochs<br>
+<br>
+The students of Faculty of Engineering and Technology at Jamia Millia Islamia invite you to celebrate the joy of dressing at the kernel of high street fashion: TARZ-E-LIBAAS, to be held under the parasol of our annual cultural extravaganza Xtacy’19.
+<br><br>
 
+VENUE - Gate No. 13, Jamia Millia Islamia, New Delhi-110025<br>
+DATE - 30th March, 2019<br>
+<br>
+
+RULES AND REGULATIONS OF THE EVENT:<br>
+
+1. Theme: Pertaining to any Social Cause<br>
+2. It is a team event. Each team can have 10 to 15 members (including participants, choreographer and coordinator).  <br>
+3. Each team will get a total time of 15 minutes (including the performance and stage setup). Marks will be deducted if the participants exceed the time limit.<br>
+4. Props to be used are to be brought by the teams.<br>
+5. Once the teams have registered, no refund will be initiated.<br>
+<br>
+Last date for registration: 28th March, 2019<br>
+<br>
+Registration Fees: Rs. 750/-<br>
+<br>
+Paytm Number:<br>
+Tabish- 9717728085<br>
+<br>
+
+Edith Head  was once quoted as saying, “You can have anything you want if you dress for it”. Show your creativity through your couture and win the coveted title!<br>
+<br>
+1st Prize: Rs. 15,000 + DCOP Photoshoot Voucher worth Rs. 2 lakhs<br>
+2nd Prize: DCOP Photoshoot Voucher worth Rs. 1.8 lakhs + exciting merchandise from Moonstar<br>
+<br>
+
+For any query and further details, contact:<br>
+Sadaf- 8585997918<br>
+Aliza- 7289002115<br>
+<br>
+P.S. Detailed rules of the event and procedure for slot booking will be communicated via e-mail once the team has registered.<br>
+<br>
+<b>Link to Registration Form: https://tinyurl.com/yyy5cyfe<br></b>
     </p>
 </div>
-<button class="button solid" id="reg">REGISTER</button>
