--- a/eventRegistry/content/hackhl.html
+++ b/eventRegistry/content/hackhl.html
@@ -8,8 +8,34 @@
 
     <div class="container">
         <h1>HACKATHON</h1>
+        <div class="container center">
+            <img src="/static/img/events/poster/hackhl.webp" class="poster">
+            <p class=justify">
+                    “Make it work, make it right, make it fast.”<br>
+                    <br>
+                    Xtacy the annual fest of Faculty of Engineering and Technology, Jamia Millia Islamia, brings to you an offline hackathon - <br>
+                    HacX, where your crazy ideas become reality.<br>
+                    <br>
+                    Six hours, ten teams, one room, one problem.<br>
+                    <br>
+                    Teams will be given a problem statement on the spot and are expected to develop a solution . The criteria of judgement would be :-<br>
+                    - Approach to the problem <br>
+                    - Practicality in teams of real world application<br>
+                    - Cost effectiveness of the solution<br>
+                    - Reach of the solution to the targeted audience<br>
+                    <br>
+                    Venue :- FTK, Jamia Millia Islamia, Delhi<br>
+                    Date  :- 31th March, 2019<br>
+                    Time  :- 11am<br>
+                    Prize :- 5000 + goodies<br>
+                    <br>
+                    
+                    Contact <br>
+                    Daniyal - 9999106604<br>
+                    Omair - 8171331341<br>
+            </p>
+        </div>
 
-        <!-- * The following REGISTER button should always be present * -->
         <button class="button solid" id="reg">REGISTER</button>
     </div>
 
