--- a/eventRegistry/content/tgowar.html
+++ b/eventRegistry/content/tgowar.html
@@ -1,8 +1,26 @@
-<h1></h1>
+<h1>Tug Of War</h1>
 <div class="container center">
     <img src="/static/img/events/poster/tgowar.webp" class="poster">
     <p class="justify">
-
+            Let’s see who PULLS stronger!<br>
+            It’s a tug of war event for a side of 5. It’s time to pull as hard as possible to make your team win the game.<br>
+            RULES:<br>
+            1) Matches will be played in rally system <br>
+            2) Matches will based on  the basis of best of 3 pulls.<br>
+            3) Strength per team will be decided on the number of students available at that time.<br>
+            On-spot registration: 60 Rs per team<br>
+            Prize :  100 Rs(winning team)<br>
+            <br>
+            Venue - MA Ansari Lawns<br>
+            <br>
+            Date and Time<br>
+            30/03/19 at 9am-5pm<br>
+            31/03/19 at 9am-5pm<br>
+            <br>
+            For more details contact-<br>
+            Albab     8707377823<br>
+            Parikshit  8003179973<br>
+            
     </p>
 </div>
 <button class="button solid" id="reg">REGISTER</button>
