--- a/eventRegistry/promos/nerdwd.html
+++ b/eventRegistry/promos/nerdwd.html
@@ -1,29 +1,26 @@
-<!-- ====  Hackathon (Real)  ==== -->
-
-<!--== HTML Promo Content ==-->
-    <!-- Templates contain just the <article> of the page -->
-    <!-- NO ACTION ELEMENTS LIKE LINKS OR BUTTONS -->
-
-    <!-- Global CSS and Security are always applied -->
-
     <p class="justify">
-        Mauris tincidunt mauris quis leo consectetur egestas. Nam quis nibh in mauris tristique pretium. 
-        Sed at cursus diam, sit amet maximus orci. Etiam at diam at leo finibus tincidunt. Nunc mollis 
-        tincidunt lectus. Maecenas placerat purus dapibus mauris rutrum, quis commodo erat porta. 
-        Aliquam erat volutpat. Ut finibus erat eget dapibus ultricies. Ut sit amet justo in leo viverra gravida. 
-        Etiam a dictum justo. Aliquam eu efficitur tellus. Curabitur facilisis purus non velit tincidunt semper. 
-        Sed interdum vehicula urna. Morbi suscipit accumsan finibus. Sed sed est et dui bibendum consectetur in vel purus. 
-        Quisque dignissim nisl lacus, ut convallis est luctus nec.
+        There are 10 kinds of people: those who code and those who don’t<br>
+<br>
+Nerds fight for the alpha, smartest takes ‘em all. Xtacy ’19, the Annual Techno-cultural fest of JMI, is here with a competitive coding where you get to argue with your machines for dominance: Nerd Words
+<br><br>
+Join us for this event and get to participate with some of the finest nerds to prove and hone your skills at coding, objective thinking, and everything else us nerds are about. We promise you’ll leave smarter than you came in.
+<br><br>
+Rules:<br>
+1. Participants can participate in teams of two, however, they will only be allowed to use a single laptop<br>
+2. Except the given website, using the internet is not allowed and may result in immediate disqualification<br>
+3. Participants are expected to bring their own laptops<br>
+<br>
+Venue:	FTK JAMIA MILLIA ISLAMIA<br>
+<br>
+Date: March 30 2019
+<br>
+Time: 2 PM<br> 
+<br>
+Cash prize:<br>
+1st prize: 2500<br>
+2nd prize: 500<br>
+<br>
+For further details contact:<br>
+Omair: 8171331341<br>
+Tanzil: 8340566138 / 9958094407<br>
     </p>
-
-    <p class="justify">
-        Mauris tincidunt mauris quis leo consectetur egestas. Nam quis nibh in mauris tristique pretium. 
-        Sed at cursus diam, sit amet maximus orci. Etiam at diam at leo finibus tincidunt. Nunc mollis 
-        tincidunt lectus. Maecenas placerat purus dapibus mauris rutrum, quis commodo erat porta. 
-        Aliquam erat volutpat. Ut finibus erat eget dapibus ultricies. Ut sit amet justo in leo viverra gravida. 
-        Etiam a dictum justo. Aliquam eu efficitur tellus. Curabitur facilisis purus non velit tincidunt semper. 
-        Sed interdum vehicula urna. Morbi suscipit accumsan finibus. Sed sed est et dui bibendum consectetur in vel purus. 
-        Quisque dignissim nisl lacus, ut convallis est luctus nec.
-    </p>
-    
-<!--== END PAGE ==-->
