--- a/eventRegistry/content/crelay.html
+++ b/eventRegistry/content/crelay.html
@@ -1,6 +1,6 @@
 <h1>Code Relay</h1>
 <div class="container center">
-    <img src="/static/img/events/poster" class="poster">
+    <img src="/static/img/events/poster/crelay.webp" class="poster">
     <p class="justify">
             As google defines it, A relay race is a track and field event in which athletes run a pre-set distance carrying a baton before passing it onto the next runner. Seeing the importance of collaborating together in today's day and age, Xtacy ’19 brings to you code relay 2019, come and test your skills and understanding with your partner in crime, be it a fellow colleague, your significant other or the chandler to your joey and if you’re worthy win a prize as well !
             <br><br>
