--- a/eventRegistry/content/linefl.html
+++ b/eventRegistry/content/linefl.html
@@ -2,7 +2,35 @@
 <div class="container center">
     <img src="/static/img/events/poster/linefl.webp"  class="poster">
     <p class="justify">
+        Can you build an robot capable of following a line that can make key decisions about its path? Then this challenge if for you.<br>
+        <br>
+Xtacy, Anual Techno-Cultural Fest of Faculty of Engineering and Technology, Jamia Millia Islamia brings to you<br>
+<br>
+LINE FOLLOWER ROBOT CHALLENGE<br>
+<br>
+The challenge of the competition is to make a robot that can move on black lines on a white background and reach the finish as soon as possible.<br>
+Accept the challenge and show your robotic skills.  <br>
+<br>
+<br>
+Team Size: Upto 4 members<br>
+<br>
+Venue : Faculty Of Engineering And Technology     <br>
+<br>
+Date : 31st March<br>
+<br>
+Time : 12 PM onwards<br>
+<br>
+Rules are given in the registration form
+<br>
+<br>
 
+Registration Fees - 100 (per team)<br>
+<br>
+Prize - 2000<br> 
+<br>
+For any further queries contact-<br>
+Zafaryab - 8882586139<br>
+Saud - 9891516859<br>
     </p>
 </div>
 <button class="button solid" id="reg">REGISTER</button>
