--- a/eventRegistry/promos/cityty.html
+++ b/eventRegistry/promos/cityty.html
@@ -1,3 +1,40 @@
 <p class="justify">
-
+    Quality and luxuries of life can be found between the lines of a city planner's draft.<br>
+Who doesn't get mesmerized my geometrically satisfying lanes of Paris. <br>
+<br>
+<br>
+Xtacy '19  the techno-cultural  fest of department of engineering and technology, Jamia Millia Islamia, Delhi gives you the opportunity to plan the city of your dreams. Unleash the planner in you and draft the most amazing city ever planned. 
+<br>In city tycoon , join us to compete with the finest planners and showcase your skills.<br>
+<br>
+RULES:-<br>
+ <br>
+-Contestants to register before 26th of march (6:00 pm) <br>
+<br>
+-The problem statement with the requirements and norms will be mailed to the registered participants after closing of the registration.<br>
+<br>
+-Contestants to submit their respective soft copy of their design before midnight of 29th.<br>
+<br>
+-Five shortlisted participants to present their model the next day in front of judge.<br>
+<br>
+-Declaration of the winners on 31st march <br> 
+<br>
+Venue- room number 323, faculty of engineering  and technology <br>
+<br>
+Date - 31 March '19<br>
+<br>
+Time - 11:00 AM onwards <br>
+<br>
+Cash Prize<br>
+Winner - 1500<br>
+Runner up - 600 <br>
+Registration fee:75 <br>
+<br>
+Paytm Number-<br>
+Shoaib- 7765916049<br>
+<!-- Registration link: 
+https://docs.google.com/forms/d/e/1FAIpQLSd5bCCs_cJfMuCKK-M2Jghl0v5iBV9upkES_Ph8lTAbp4Qcrw/viewform -->
+<br>
+For further details contact-<br>
+Shoaib - 7765916049<br>
+Usman - 9758923314<br>
 </p>
