--- a/eventRegistry/promos/hackhl.html
+++ b/eventRegistry/promos/hackhl.html
@@ -1,4 +1,4 @@
-<p class=justify">
+<p class="justify">
         “Make it work, make it right, make it fast.”<br>
         <br>
         Xtacy the annual fest of Faculty of Engineering and Technology, Jamia Millia Islamia, brings to you an offline hackathon - <br>
