--- a/eventRegistry/content/hackhl.html
+++ b/eventRegistry/content/hackhl.html
@@ -10,7 +10,7 @@
         <h1>HACKATHON</h1>
         <div class="container center">
             <img src="/static/img/events/poster/hackhl.webp" class="poster">
-            <p class=justify">
+            <p class="justify">
                     “Make it work, make it right, make it fast.”<br>
                     <br>
                     Xtacy the annual fest of Faculty of Engineering and Technology, Jamia Millia Islamia, brings to you an offline hackathon - <br>
