--- a/eventRegistry/content/csgopc.html
+++ b/eventRegistry/content/csgopc.html
@@ -24,4 +24,5 @@
         Shamikh(8588834047)<br>
         Azim(7533005654)<br>
     </p>
+    <button class="button solid" id="reg">REGISTER</button>
 </div>
