--- a/eventRegistry/content/linefl.html
+++ b/eventRegistry/content/linefl.html
@@ -20,7 +20,16 @@ Date : 31st March<br>
 <br>
 Time : 12 PM onwards<br>
 <br>
-Rules are given in the registration form
+Rules :-<br>
+1. A Team may consist of Maximum of 4 Members.<br>
+2. The maximum overall dimensions of the bot should be 25cm x 25cm x 15cm (l x b x h).<br>
+3. You can use any micro controller to program your robot. Pre-programmed kits such as LEGO are Not allowed.<br>
+4. The Robot must be powered by a power source such as a Battery fixed on the Robot.<br>
+5. The line will be Black and 2 cm in width .<br>
+6. There could be 90 degree Turns, acute angle turns, Obtuse angle turns, and crossover .<br>
+7. The robot must be controlled autonomously without any human aid after start of the run.<br>
+8. If the bot goes out of the track there will be reset with penelty.<br>
+9. Judge's Decision will be Final.<br>
 <br>
 <br>
 
