--- a/eventRegistry/content/crelay.html
+++ b/eventRegistry/content/crelay.html
@@ -17,7 +17,7 @@
             <br>
             Date - 30 March, 2019<br>
             Time - 11am<br>
-            Venue - FTK, Jamia Millia Islamia<br>
+            Venue - FET, Jamia Millia Islamia<br>
             <br>
             Prizes:<br>
             1st Prize - 2000 Rupees <br>
