--- a/eventRegistry/content/hackhl.html
+++ b/eventRegistry/content/hackhl.html
@@ -24,7 +24,7 @@
                     - Cost effectiveness of the solution<br>
                     - Reach of the solution to the targeted audience<br>
                     <br>
-                    Venue :- FTK, Jamia Millia Islamia, Delhi<br>
+                    Venue :- FET, Jamia Millia Islamia, Delhi<br>
                     Date  :- 31th March, 2019<br>
                     Time  :- 11am<br>
                     Prize :- 5000 + goodies<br>
