--- a/eventRegistry/promos/ctflag.html
+++ b/eventRegistry/promos/ctflag.html
@@ -8,7 +8,7 @@ To all the hackers and security enthusiasts out there, <br>
 Xtacy the annual fest of Faculty of Engineering and Technology Jamia Millia Islamia, brings to you the exact opportunity to show off your hacking skills in this Capture The Flag event!<br>
 Think you have what it takes, come and bring your hack buddies and participate to be introduced to the world of cryption, ciphers and so much more.<br>
 <br>
-Venue: FTK, Jamia Millia Islamia<br>
+Venue: FET, Jamia Millia Islamia<br>
 Date: 30th March, 2019<br>
 Time:  1PM<br>
 Rules: A maximum of 3 members per team and one laptop per team. <br>
