--- a/eventRegistry/promos/nerdwd.html
+++ b/eventRegistry/promos/nerdwd.html
@@ -10,7 +10,7 @@ Rules:<br>
 2. Except the given website, using the internet is not allowed and may result in immediate disqualification<br>
 3. Participants are expected to bring their own laptops<br>
 <br>
-Venue:	FTK JAMIA MILLIA ISLAMIA<br>
+Venue:	FET JAMIA MILLIA ISLAMIA<br>
 <br>
 Date: March 30 2019
 <br>
