--- a/eventRegistry/content/kunalk.html
+++ b/eventRegistry/content/kunalk.html
@@ -7,4 +7,13 @@ Presenting in association with Cadbury 5 Star, the host of the viral podcast Shu
 <br>
 Entry by Gold passes only.
 </p>
-<button class="button solid" id="reg">REGISTER</button>
+
+Seats are full and registrations are closed. 
+All those who paid will recieve a confirmation email. 
+In case you have paid and didn't recieve an email with a barcode, you 
+can get entry by showing us your payment SMS or email from your bank or from the payment app.<br>
+<br><br>
+Entry will start at 6:30pm on 30th March.<br>
+The venue for the event is Open Air Theatre (Amphitheater), Jamia Millia Islamia.<br><br>
+
+<!-- <button class="button solid" id="reg">REGISTER</button> -->
