--- a/eventRegistry/content/kunalk.html
+++ b/eventRegistry/content/kunalk.html
@@ -9,11 +9,19 @@ Entry by Gold passes only.
 </p>
 
 Seats are full and registrations are closed. 
-All those who paid will recieve a confirmation email. 
+All those who paid and got an acknowledgement number will recieve a confirmation email. 
 In case you have paid and didn't recieve an email with a barcode, you 
 can get entry by showing us your payment SMS or email from your bank or from the payment app.<br>
 <br><br>
-Entry will start at 6:30pm on 30th March.<br>
-The venue for the event is Open Air Theatre (Amphitheater), Jamia Millia Islamia.<br><br>
+Entry will start at 6:30pm on 30th March. Please reach by 5:00pm sharp.<br>
+The venue for the event is Open Air Theatre (Amphitheater), Gate No. 13, Jamia Millia Islamia.<br><br>
+<br><br>
+
+<b>Rules</b>
+<ol>
+    <li><b>Strictly no videography of any kind.</b> This is a request from Kunal himself</li>
+    <li>Large bags and backpacks are not allowed.</li>
+    <li>Liquids and eatables are not allowed.</li>
+</ol>
 
 <!-- <button class="button solid" id="reg">REGISTER</button> -->
